--- a/package.json
+++ b/package.json
@@ -48,9 +48,10 @@
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.292.0",
     "nanoid": "^4.0.2",
-    "next": "14.0.2",
+    "next": "14.0.3",
     "next-auth": "4.24.5",
     "next-mdx-remote": "^4.4.1",
+    "next-usequerystate": "^1.17.1",
     "novel": "^0.1.22",
     "openai-edge": "^1.2.2",
     "react": "^18.2.0",
@@ -82,7 +83,7 @@
     "@types/react-dom": "^18.2.15",
     "autoprefixer": "^10.4.16",
     "eslint": "8.53.0",
-    "eslint-config-next": "^14.0.2",
+    "eslint-config-next": "^14.0.3",
     "postcss": "^8.4.31",
     "prettier": "^3.1.0",
     "prettier-plugin-tailwindcss": "^0.5.7",
