--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@clerk/nextjs": "^5.0.12",
+    "@clerk/nextjs": "^5.1.0",
     "@dnd-kit/core": "^6.1.0",
     "@dnd-kit/modifiers": "^7.0.0",
     "@emotion/react": "^11.11.3",
@@ -49,7 +49,7 @@
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.292.0",
     "nanoid": "^4.0.2",
-    "next": "14.0.3",
+    "next": "^14.2.3",
     "next-auth": "4.24.5",
     "next-mdx-remote": "^4.4.1",
     "next-usequerystate": "^1.17.1",
